--- a/Regression_stepwise.ipynb
+++ b/Regression_stepwise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -53,18 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'X' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m vif \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame()\n\u001b[0;32m      8\u001b[0m vif[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfeature\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m COLS_X\u001b[38;5;241m.\u001b[39mcolumns\n\u001b[1;32m----> 9\u001b[0m vif[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mVIF\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m [variance_inflation_factor(COLS_X\u001b[38;5;241m.\u001b[39mvalues, i) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[43mX\u001b[49m\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m])]\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(vif)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'X' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  feature       VIF\n",
+      "0    high  8.753922\n",
+      "1     low  8.753922\n"
      ]
     }
    ],
@@ -74,7 +72,7 @@
     "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
     "\n",
     "# 首先，你可能需要检查多重共线性，可以使用方差膨胀因子（Variance Inflation Factor, VIF）\n",
-    "COLS_X = df[['text_day', 'text_night', 'high', 'low', 'wc_day', 'wd_day', 'wc_night', 'wd_night', 'week']]  # 选择所有可能的预测变量\n",
+    "COLS_X = df[[ 'high', 'low']]  # 选择所有可能的预测变量\n",
     "vif = pd.DataFrame()\n",
     "vif[\"feature\"] = COLS_X.columns\n",
     "vif[\"VIF\"] = [variance_inflation_factor(COLS_X.values, i) for i in range(COLS_X.shape[1])]\n",
