20240607 交接给刘老师

--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "有1天受涨价前抢购因素影响，有4天受涨价后的价格因素影响, 有4天受降价利好销量提振影响，有2天受降价前持币待购的因素影响\n"
+      "有7天受降价利好销量提振影响\n"
      ]
     }
    ],
@@ -25,10 +25,10 @@
     "    str: 描述调价label计数的字符串。\n",
     "    \"\"\"\n",
     "    # 定义涨价和降价相关的标签\n",
-    "    increase_labels_add = [\"涨价前两天\", \"涨价前一天\"] #涨价导致销量向上波动的情况\n",
-    "    increase_labels_minus = [\"涨价当天\", \"涨价第二天\", \"涨价第三天\", \"涨价第四天\"] #涨价导致销量向下波动的情况\n",
-    "    decrease_labels_add = [\"降价当天\", \"降价第一天\", \"降价第二天\", \"降价第三天\"] #降价导致销量向上波动的情况\n",
-    "    decrease_labels_minus = [\"降价前两天\", \"降价前一天\"] #降价导致销量向下波动的情况\n",
+    "    increase_labels_add = [\"涨价前两天\", \"涨价前一天\"]  # 涨价导致销量向上波动的情况\n",
+    "    increase_labels_minus = [\"涨价当天\", \"涨价第二天\", \"涨价第三天\", \"涨价第四天\"]  # 涨价导致销量向下波动的情况\n",
+    "    decrease_labels_add = [\"降价当天\", \"降价第一天\", \"降价第二天\", \"降价第三天\"]  # 降价导致销量向上波动的情况\n",
+    "    decrease_labels_minus = [\"降价前两天\", \"降价前一天\"]  # 降价导致销量向下波动的情况\n",
     "\n",
     "    # 计算涨价和降价相关标签的总天数\n",
     "    increase_count_add = sum(label_count_dict.get(label, 0) for label in increase_labels_add)\n",
@@ -37,30 +37,37 @@
     "    decrease_count_minus = sum(label_count_dict.get(label, 0) for label in decrease_labels_minus)\n",
     "\n",
     "    # 生成描述字符串\n",
-    "    result_str = (\n",
-    "        f\"有{increase_count_add}天受涨价前抢购因素影响，有{increase_count_minus}天受涨价后的价格因素影响, 有{decrease_count_add}天受降价利好销量提振影响，有{decrease_count_minus}天受降价前持币待购的因素影响\"\n",
+    "    result_str = \"\"\n",
     "\n",
-    "    )\n",
-    "    \n",
-    "    # 添加每个标签的计数\n",
-    "    # for label, count in label_count_dict.items():\n",
-    "    #     result_str += f\"{label}: {count}\\n\"\n",
+    "    if increase_count_add > 0:\n",
+    "        result_str += f\"有{increase_count_add}天受涨价前抢购因素影响，\"\n",
+    "    if increase_count_minus > 0:\n",
+    "        result_str += f\"有{increase_count_minus}天受涨价后的价格因素影响，\"\n",
+    "    if decrease_count_add > 0:\n",
+    "        result_str += f\"有{decrease_count_add}天受降价利好销量的提振影响，\"\n",
+    "    if decrease_count_minus > 0:\n",
+    "        result_str += f\"有{decrease_count_minus}天受降价前持币待购的因素影响，\"\n",
+    "\n",
+    "    # 去掉最后一个逗号\n",
+    "    if result_str.endswith(\"，\"):\n",
+    "        result_str = result_str[:-1]\n",
     "\n",
     "    return result_str\n",
     "\n",
     "# 示例数据\n",
     "label_count_dict = {\n",
-    "    \"涨价前一天\": 1,\n",
-    "    \"涨价当天\": 1,\n",
-    "    \"涨价第二天\": 1,\n",
-    "    \"涨价第三天\": 1,\n",
-    "    \"涨价第四天\": 1,\n",
+    "    \"涨价前两天\": 0,\n",
+    "    \"涨价前一天\": 0,\n",
+    "    \"涨价当天\": 0,\n",
+    "    \"涨价第二天\": 0,\n",
+    "    \"涨价第三天\": 0,\n",
+    "    \"涨价第四天\": 0,\n",
     "    \"无价格变动\": 10,\n",
-    "    \"降价前两天\": 1,\n",
-    "    \"降价前一天\": 1,\n",
-    "    \"降价当天\": 1,\n",
+    "    \"降价前两天\": 0,\n",
+    "    \"降价前一天\": 0,\n",
+    "    \"降价当天\": 0,\n",
     "    \"降价第一天\": 1,\n",
-    "    \"降价第二天\": 1,\n",
+    "    \"降价第二天\": 5,\n",
     "    \"降价第三天\": 1\n",
     "}\n",
     "\n",
