--- a/Test_MannKendall.ipynb
+++ b/Test_MannKendall.ipynb
@@ -2,33 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           date  order_cnt       amount  refuelLiters text_day text_night  \\\n",
-      "359  2023-12-26    1072045  335929197.6   44738960.24        阴         多云   \n",
-      "360  2023-12-27    1054896  332618128.4   44334481.65       多云          晴   \n",
-      "361  2023-12-28    1032115  323028612.7   42986493.14        晴         多云   \n",
-      "362  2023-12-29    1218840  372592734.2   49432247.01       多云         小雨   \n",
-      "363  2023-12-30    1126207  341635923.3   45312200.19        阴          晴   \n",
-      "\n",
-      "     high  low wc_day wd_day wc_night  encoded_wc_night wd_night week  \\\n",
-      "359     9    0   3~4级     东风     3~4级                 1       东风  星期二   \n",
-      "360    12    0    <3级    西北风      <3级                 0       北风  星期三   \n",
-      "361    12    3   3~4级     北风      <3级                 0       东风  星期四   \n",
-      "362    12    5   3~4级    东南风      <3级                 0      东南风  星期五   \n",
-      "363    14    1    <3级    西南风     4~5级                 2      西北风  星期六   \n",
-      "\n",
-      "     code_week holidays  encoded_holidays  305_price  313_price  \n",
-      "359          2       平时                 4        7.5       7.98  \n",
-      "360          3       平时                 4        7.5       7.98  \n",
-      "361          4       平时                 4        7.5       7.98  \n",
-      "362          5       平时                 4        7.5       7.98  \n",
-      "363          6       平时                 4        7.5       7.98  \n"
+      "           日期   销量（升）  石化站价格  竞争站价格    价差\n",
+      "0  2023-07-17   40.06   7.63   7.19  0.44\n",
+      "1  2023-07-18    0.24   7.63   7.19  0.44\n",
+      "2  2023-07-19  239.41   7.63   7.19  0.44\n",
+      "3  2023-07-20  381.09   7.63   7.19  0.44\n",
+      "4  2023-07-21  553.67   7.63   7.19  0.44\n"
      ]
     }
    ],
@@ -36,26 +22,39 @@
     "#Mannkendall 检验，用来检验一个时间序列变量，是否在时间上具有趋势性。\n",
     "\n",
     "# 超参数\n",
-    "COLS_Y = ['amount']\n",
-    "COLS_ALL = ['date', 'amount', 'refuelLiters', 'order_cnt', 'text_day', 'text_night', 'high', 'low', 'wc_day', 'wd_day', 'wc_night', 'wd_night', 'week', 'holidays', 'encoded_wc_night', 'code_week', 'encoded_holidays', '305_price','313_price' ]\n",
+    "COLS_Y = '销量（升）'\n",
+    "COLS_ALL = ['日期', '销量（升）', '石化站价格', '竞争站价格', '价差']\n",
     "\n",
     "import pandas as pd\n",
     "\n",
     "# 读取excel文件并获取指定列\n",
-    "df = pd.read_csv('Data\\结果1_全站按日期分组_2023全年.csv', usecols=COLS_ALL, encoding='GBK')\n",
-    "print(df.tail())\n"
+    "df_uncleaned = pd.read_csv('Data/竞争站23年单站32809336.csv', usecols=COLS_ALL)\n",
+    "# 删除包含空值的行\n",
+    "df = df_uncleaned.dropna()\n",
+    "print(df.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mann_Kendall_Test(trend='increasing', h=True, p=0.00018670112770591274, z=3.7363629544193744, Tau=0.1312021312021312, s=8668.0, var_s=5380708.666666667, slope=87078.1160403477, intercept=344914121.1886769)\n"
+      "Mann_Kendall_Test(trend='increasing', h=True, p=5.992228624407403e-07, z=4.991467436629067, Tau=0.25948103792415167, s=3640.0, var_s=531505.3333333334, slope=1.6157528166609763, intercept=744.3346398088084)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"Mann_Kendall_Test\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n\u001b[0;32m      6\u001b[0m season_result \u001b[38;5;241m=\u001b[39m mk\u001b[38;5;241m.\u001b[39mseasonal_test(df[COLS_Y])\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mseason_result \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mresult\u001b[49m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"Mann_Kendall_Test\") to str"
      ]
     }
    ],
@@ -63,7 +62,10 @@
     "import pymannkendall as mk\n",
     "# 进行曼-肯德尔趋势检验\n",
     "result = mk.original_test(df[COLS_Y])\n",
-    "print(result)"
+    "print(result)\n",
+    "\n",
+    "season_result = mk.seasonal_test(df[COLS_Y])\n",
+    "print(f'season_result: {season_result}')"
    ]
   },
   {
