0820 Model_CompetitivePrice竞争站点建模

--- a/Test_MannKendall.ipynb
+++ b/Test_MannKendall.ipynb
@@ -36,25 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mann_Kendall_Test(trend='increasing', h=True, p=5.992228624407403e-07, z=4.991467436629067, Tau=0.25948103792415167, s=3640.0, var_s=531505.3333333334, slope=1.6157528166609763, intercept=744.3346398088084)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"Mann_Kendall_Test\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n\u001b[0;32m      6\u001b[0m season_result \u001b[38;5;241m=\u001b[39m mk\u001b[38;5;241m.\u001b[39mseasonal_test(df[COLS_Y])\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mseason_result \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mresult\u001b[49m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"Mann_Kendall_Test\") to str"
+      "Mann_Kendall_Test(trend='increasing', h=True, p=5.992228624407403e-07, z=4.991467436629067, Tau=0.25948103792415167, s=3640.0, var_s=531505.3333333334, slope=1.6157528166609763, intercept=744.3346398088084)\n",
+      "season_result: Seasonal_Mann_Kendall_Test(trend='increasing', h=True, p=4.942630603910203e-06, z=4.567208185466327, Tau=0.26556776556776557, s=290.0, var_s=4003.9999999999995, slope=16.894134615384615, intercept=761.6949799679487)\n"
      ]
     }
    ],
