--- a/EDA_corr_column.ipynb
+++ b/EDA_corr_column.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -143,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "常数列 'shipper_name' is a constant column and will be skipped corr cal.\n",
+      "常数列 'shipper_name' is a constant column and will be skipped corr caculate.\n",
       "Top 3 影响列：  ['name', 'client_name', 'ou_name']\n"
      ]
     }
